k3d/linkerd-viz-ingress.yaml
# k3d Ingress — Linkerd Viz dashboard
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-npd
  namespace: linkerd-viz
spec:
  ingressClassName: traefik
  rules:
    - host: linkerd-npd.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
